// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible tests should match snapshot 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}

.emotion-6 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.5rem;
  padding-right: 0.75rem;
  text-transform: none;
}

.emotion-6:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-6:hover {
  color: #214491;
  background-color: rgba(202,215,241,0.24);
}

.emotion-6:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-6:disabled {
  color: #898F9E;
}

.emotion-6 svg {
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-6:hover {
  background-color: transparent;
}

.emotion-6:active {
  background-color: transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 150ms ease;
  transition: transform 150ms ease;
}

.emotion-4 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  bottom: 0rem;
  top: 0rem;
  left: 0rem;
  right: 0rem;
  visibility: hidden;
}

.emotion-3 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
}

.emotion-2 {
  fill: none;
  stroke: currentColor;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  background-color: #FFFFFF;
  border-color: #E0E2E7;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1.5rem;
  padding-left: 0.5rem;
}

.emotion-8 div>button:nth-of-type(n+2) {
  margin-left: 0.25rem;
}

.emotion-9 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1.5rem;
}

<div
    class="emotion-10"
  >
    <header
      class="emotion-8"
    >
      <button
        aria-controls="mocked-id"
        aria-expanded="true"
        class="emotion-6"
        type="button"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              fill="none"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 14L12 10L8 14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
             Collapsible Label
          </div>
          <div
            class="emotion-4"
          >
            <svg
              class="emotion-3"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-2"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <div
        class="emotion-7"
      />
    </header>
    <section
      id="mocked-id"
      style="height: 0px; opacity: 0;"
    >
      <div
        class="emotion-9"
      >
        Collapsible Content
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Collapsible tests should match snapshot with nesting collapsibles 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}

.emotion-6 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.5rem;
  padding-right: 0.75rem;
  text-transform: none;
}

.emotion-6:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-6:hover {
  color: #214491;
  background-color: rgba(202,215,241,0.24);
}

.emotion-6:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-6:disabled {
  color: #898F9E;
}

.emotion-6 svg {
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-6:hover {
  background-color: transparent;
}

.emotion-6:active {
  background-color: transparent;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 150ms ease;
  transition: transform 150ms ease;
}

.emotion-4 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  bottom: 0rem;
  top: 0rem;
  left: 0rem;
  right: 0rem;
  visibility: hidden;
}

.emotion-3 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
}

.emotion-2 {
  fill: none;
  stroke: currentColor;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-19 {
  background-color: #FFFFFF;
  border-color: #E0E2E7;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1.5rem;
  padding-left: 0.5rem;
}

.emotion-8 div>button:nth-of-type(n+2) {
  margin-left: 0.25rem;
}

.emotion-20 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1.5rem;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1rem;
  padding-left: 0rem;
}

.emotion-17 div>button:nth-of-type(n+2) {
  margin-left: 0.25rem;
}

.emotion-18 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

<div
    class="emotion-19"
  >
    <header
      class="emotion-8"
    >
      <button
        aria-controls="mocked-id"
        aria-expanded="true"
        class="emotion-6"
        type="button"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              fill="none"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 14L12 10L8 14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
             Collapsible Label
          </div>
          <div
            class="emotion-4"
          >
            <svg
              class="emotion-3"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-2"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <div
        class="emotion-7"
      />
    </header>
    <section
      id="mocked-id"
      style="height: 0px; opacity: 0;"
    >
      <div
        class="emotion-20"
      >
        <div
          class="emotion-19"
        >
          <header
            class="emotion-17"
          >
            <button
              aria-controls="mocked-id"
              aria-expanded="true"
              class="emotion-6"
              type="button"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-1"
                >
                  <svg
                    class="emotion-0"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 14L12 10L8 14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                   Collapsible Label
                </div>
                <div
                  class="emotion-4"
                >
                  <svg
                    class="emotion-3"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 50 50"
                  >
                    <circle
                      class="emotion-2"
                      cx="25"
                      cy="25"
                      r="20"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              class="emotion-7"
            />
          </header>
          <section
            id="mocked-id"
            style="height: 0px; opacity: 0;"
          >
            <div
              class="emotion-18"
            >
              Collapsible Content
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
